--- a/Design_layout/css/backend.css
+++ b/Design_layout/css/backend.css
@@ -18,3 +18,34 @@ background-color:#0040ff;
 background-color:#00bfff;
 }
 /*End login form*/
+
+/*Start Bootstrap Edits*/
+.navbar{
+  border-radius: 0;
+  margin-bottom: 0;
+}
+.navbar >  li > a,
+.navbar-brand{
+  padding: 15px 12px;
+}
+.navbar-brand{
+  font-size: 1em;
+}
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:focus,
+.navbar-inverse .navbar-nav > .open > a:hover, .dropdown-menu {
+    background-color: #15A7B9;
+}
+.dropdown-menu{
+min-width: 180px;
+padding: 0;
+font-size: 1em;
+border: none;
+border-radius: 0;
+
+}
+.navbar-nav > li > .dropdown-menu{
+  color: #FFF;
+  padding: 10px 15px;
+}
+/*End Bootstrap Edits*/
