--- a/Design_layout/css/backend.css
+++ b/Design_layout/css/backend.css
@@ -1,8 +1,18 @@
 /*Start main  rules*/
 body{
   background-color: #e6ffff;
+  font-size: 16px;
 }
+
 /*END main rules*/
+.asterisk{
+  font-size: 30px;
+  position: absolute;
+  right: 30px;
+  top: 8px;
+  color: #e60000;
+
+}
 /*Start login form*/
 .login{
   width: 300px;
@@ -46,6 +56,9 @@ border-radius: 0;
 .navbar-nav > li > .dropdown-menu{
   color: #FFF;
   padding: 10px 15px;
+}
+.form-group{
+  position: relative;
 }
 /*End Bootstrap Edits*/
 /* start members page*/
