--- a/Design_layout/css/backend.css
+++ b/Design_layout/css/backend.css
@@ -73,6 +73,19 @@ border-radius: 0;
     top: 7px;
     right: -30px;
   }
+  .main-table{
+    -webkit-boxshadow: 0 3px 10px #CCC;
+    -moz-boxshadow: 0 3px 10px #CCC;
+    -o-boxshadow: 0 3px 10px #CCC;
+    boxshadow: 0 3px 10px #CCC;
+  }
+  .main-table .btn{
+    padding: 3px 10px;
+  }
+  .main-table td{
+    background-color: #FFF;
+    vertical-align: middle !important;
+  }
   .main-table tr:first-child td{
     background-color: #333;
     color: #FFF;
