--- a/Design_layout/css/backend.css
+++ b/Design_layout/css/backend.css
@@ -145,3 +145,32 @@ overflow: hidden;
     margin-left: 6px;
   }
 /* end members page*/
+/*Start category  page*/
+.category .cat h3{
+  margin: 0 0 10px;
+}
+.category .cat:last-of-type~hr{
+display: none;
+}
+.category .cat .visibility{
+  background-color: #cd0000;
+  color: #FFF;
+padding: 2px 10px;
+margin-left: 10px;
+border-radius: 6px;
+}
+.category .cat .commenting{
+  background-color: #ff6699;
+  color: #FFF;
+padding: 2px 10px;
+margin-left: 8px;
+border-radius: 6px;
+}
+.category .cat .advertises{
+  background-color: #ff3300;
+  color: #FFF;
+padding: 2px 10px;
+margin-left: 8px;
+border-radius: 6px;
+}
+/*End category  page*/
