--- a/Design_layout/css/backend.css
+++ b/Design_layout/css/backend.css
@@ -146,8 +146,60 @@ overflow: hidden;
   }
 /* end members page*/
 /*Start category  page*/
+.category .panel-heading{
+  color: #737373;
+  font-weight: bold;
+}
+.category .panel-body{
+  padding: 0;
+}
+.category .option a{
+  color: #888;
+  text-decoration: none;
+}
+.category .option span{
+  color: #888;
+  cursor: pointer;
+}
+.category .option .active{
+  color: #009900;
+  font-weight: bold;
+}
+.category .cat{
+padding: 15px;
+position: relative;
+overflow: hidden;
+}
+.category .cat:hover .hidden-button{
+  right: 10px;
+}
+.category .cat:hover{
+  background-color: #d1d1e0;
+}
+.category .cat .hidden-button{
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  position: absolute;
+  top: 15px;
+  right: -170px;
+}
+.category .cat .hidden-button a{
+margin-right: 6px;
+}
 .category .cat h3{
-  margin: 0 0 10px;
+  margin: 0;
+  cursor: pointer;
+  font-weight: bold;
+  color: #808080;
+}
+.category .cat .full-view p{
+  margin: 10px 0;
+}
+.category hr{
+margin-top: 0;
+margin-bottom: 0;
 }
 .category .cat:last-of-type~hr{
 display: none;
@@ -172,5 +224,9 @@ border-radius: 6px;
 padding: 2px 10px;
 margin-left: 8px;
 border-radius: 6px;
+}
+.category .add-category{
+  margin-top: -10px;
+  margin-bottom: 30px;
 }
 /*End category  page*/
