--- a/Design_layout/css/jquery.selectBoxIt.css
+++ b/Design_layout/css/jquery.selectBoxIt.css
@@ -11,6 +11,7 @@
 
 /* SelectBoxIt container */
 .selectboxit-container {
+  width: 100%;
   position: relative;
   display: inline-block;
   vertical-align: top;
@@ -33,7 +34,7 @@
 
 /* Button */
 .selectboxit-container .selectboxit {
-  width: 220px; /* Width of the dropdown button */
+  width: 100%; /* Width of the dropdown button */
   cursor: pointer;
   margin: 0;
   padding: 0;
