--- a/Design_layout/css/backend.css
+++ b/Design_layout/css/backend.css
@@ -11,7 +11,10 @@ body{
   right: 30px;
   top: 8px;
   color: #e60000;
-
+}
+.nice-msg{
+  margin: 20px 13px;
+  background-color:  #b5d5cc;
 }
 /*Start login form*/
 .login{
@@ -103,7 +106,37 @@ font-size: 50px;
 }
 .latest{
   margin-top: 16px;
-  toggle-info
+}
+.latest .comment-box{
+  margin: 5px 0 10px;
+}
+.latest .comment-box .member-n,
+.latest .comment-box .member-c{
+  float: left;
+}
+.latest .comment-box .member-n{
+  width: 80px;
+  text-align: center;
+  margin-right: 20px;
+  position: relative;
+}
+.latest .comment-box .member-c{
+  width: calc(100% - 100px);
+  background-color: #EEE;
+  padding: 10px;
+  position: relative;
+}
+.latest .comment-box .member-c::before{
+  content: "";
+display: block;
+position: absolute;
+left: -30px;
+top: 1px;
+width: 0;
+height: 0;
+border-style: solid;
+border-color: transparent #EEE transparent transparent;
+border-width: 15px;
 }
 .latest .toggle-info{
 color: #999;
