--- a/Design_layout/css/backend.css
+++ b/Design_layout/css/backend.css
@@ -1,8 +1,21 @@
 /*Start main  rules*/
 body{
   background-color: #e6ffff;
+  font-size: 16px;
 }
+
 /*END main rules*/
+.asterisk{
+  font-size: 30px;
+  position: absolute;
+  right: 30px;
+  top: 8px;
+  color: #e60000;
+}
+.nice-msg{
+  margin: 20px 13px;
+  background-color:  #b5d5cc;
+}
 /*Start login form*/
 .login{
   width: 300px;
@@ -47,6 +60,109 @@ border-radius: 0;
   color: #FFF;
   padding: 10px 15px;
 }
+.form-group{
+  position: relative;
+}
+/*start Home page*/
+.home-stats .stat{
+border-radius: 12px;
+  border: 2px solid #CCC;
+  padding: 20px;
+  font-size: 15px;
+  color: #FFF;
+  position: relative;
+  overflow: hidden;
+}
+.home-stats .stat i{
+  font-size: 70px;
+  position: absolute;
+  top: 35px;
+  left: 26px;
+}
+.home-stats .stat .info{
+float: right;
+}
+.home-stats .stat a{
+  color: #FFF;
+}
+.home-stats .stat a:hover{
+  text-decoration: none;
+}
+.home-stats .st-members{
+  background-color: #3333cc;
+}
+.home-stats .st-pending{
+  background-color: #00cc00;
+}
+  .home-stats .st-items{
+    background-color: #e6e600;
+  }
+      .home-stats .st-comment{
+        background-color: #00ffdd;
+      }
+.home-stats .stat span{
+display: block;
+font-size: 50px;
+}
+.latest{
+  margin-top: 16px;
+}
+.latest .comment-box{
+  margin: 5px 0 10px;
+}
+.latest .comment-box .member-n,
+.latest .comment-box .member-c{
+  float: left;
+}
+.latest .comment-box .member-n{
+  width: 80px;
+  text-align: center;
+  margin-right: 20px;
+  position: relative;
+}
+.latest .comment-box .member-c{
+  width: calc(100% - 100px);
+  background-color: #EEE;
+  padding: 10px;
+  position: relative;
+}
+.latest .comment-box .member-c::before{
+  content: "";
+display: block;
+position: absolute;
+left: -30px;
+top: 1px;
+width: 0;
+height: 0;
+border-style: solid;
+border-color: transparent #EEE transparent transparent;
+border-width: 15px;
+}
+.latest .toggle-info{
+color: #999;
+cursor: pointer;
+}
+.latest .toggle-info:hover{
+color: #666;
+}
+.latest-user{
+  margin-bottom: 0;
+}
+.latest-user li{
+  padding: 10px;
+overflow: hidden;
+}
+.latest-user li:nth-child(odd){
+  background-color: #EEE;
+}
+.latest-user .btn-success,
+ .btn-info{
+  padding: 2px 8px;
+}
+.latest-user .btn-info{
+  margin-right: 6px;
+}
+/* End Home page*/
 /*End Bootstrap Edits*/
 /* start members page*/
   h1{
@@ -55,4 +171,115 @@ border-radius: 0;
     font-weight: bold;
     color: #c0e;
   }
+  .show-pass{
+    position: absolute;
+    top: 7px;
+    right: -30px;
+  }
+  .main-table{
+    -webkit-boxshadow: 0 3px 10px #CCC;
+    -moz-boxshadow: 0 3px 10px #CCC;
+    -o-boxshadow: 0 3px 10px #CCC;
+    boxshadow: 0 3px 10px #CCC;
+  }
+  .main-table .btn{
+    padding: 3px 10px;
+  }
+  .main-table td{
+    background-color: #FFF;
+    vertical-align: middle !important;
+  }
+  .main-table tr:first-child td{
+    background-color: #333;
+    color: #FFF;
+  }
+  .activate{
+    margin-left: 6px;
+  }
 /* end members page*/
+/*Start category  page*/
+.category .panel-heading{
+  color: #808080;
+  color: #cccccc;
+  font-weight: bold;
+}
+.category .panel-body{
+  padding: 0;
+}
+.category .option a{
+  color: #888;
+  text-decoration: none;
+}
+.category .option span{
+  color: #888;
+  cursor: pointer;
+}
+.category .option .active{
+  color: #009900;
+  font-weight: bold;
+}
+.category .cat{
+padding: 15px;
+position: relative;
+overflow: hidden;
+}
+.category .cat:hover .hidden-button{
+  right: 10px;
+}
+.category .cat:hover{
+  background-color: #d1d1e0;
+}
+.category .cat .hidden-button{
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  position: absolute;
+  top: 15px;
+  right: -170px;
+}
+.category .cat .hidden-button a{
+margin-right: 6px;
+}
+.category .cat h3{
+  margin: 0;
+  cursor: pointer;
+  font-weight: bold;
+  color: #808080;
+}
+.category .cat .full-view p{
+  margin: 10px 0;
+}
+.category hr{
+margin-top: 0;
+margin-bottom: 0;
+}
+.category .cat:last-of-type~hr{
+display: none;
+}
+.category .cat .visibility{
+  background-color: #cd0000;
+  color: #FFF;
+padding: 2px 10px;
+margin-left: 10px;
+border-radius: 6px;
+}
+.category .cat .commenting{
+  background-color: #ff6699;
+  color: #FFF;
+padding: 2px 10px;
+margin-left: 8px;
+border-radius: 6px;
+}
+.category .cat .advertises{
+  background-color: #ff3300;
+  color: #FFF;
+padding: 2px 10px;
+margin-left: 8px;
+border-radius: 6px;
+}
+.category .add-category{
+  margin-top: -10px;
+  margin-bottom: 30px;
+}
+/*End category  page*/
